<resources>
    <string name="app_name">AndroidApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete">Delete Account</string>
    <string name="action_update">Update Account</string>
    <string name="username">User email</string>
    <string name="userpassword">Password</string>
    <string name="userloginbutton">Log in </string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="userSignUpbutton">Sign Up </string>
    <string name="userSignUpPassword">Password</string>
    <string name="userSignUpEmail">Email</string>
    <string name="save_changes">Save Changes</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="weight_in_kg">Weight (kg)</string>
    <string name="height_in_cm">Height (cm)</string>
    <string name="UPfirst_name">First Name</string>
    <string name="UPlast_name">Last Name</string>
    <string name="UPdate_of_birth">Date of Birth</string>
    <string name="UPgender">Gender</string>
    <string name="UPphone_number">Phone Number</string>
    <string name="UPweight_in_kg">Weight (kg)</string>
    <string name="UPheight_in_cm">Height (cm)</string>
    <string name="userUpdateEmail">Email</string>

    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_logout">Log out</string>

    <string name="title_select_type">Select a Type</string>
    <string name="action_confirm_selection">Confirm Selection</string>
    <string name="title_activity_update">Update account</string>
    <string name="title_home">Home</string>
    <string name="hint_enter_id">Enter ID to delete</string>
    <string name="button_delete">Delete</string>

    <string name="hint_enter_steps">Enter your daily steps goal</string>
    <string name="action_set_goal">Set Goal</string>

    <string-array name="activity_types_array">
        <item>Walking</item>
        <item>Running</item>
        <item>Cycling</item>

    </string-array>
    <string name="welcome_to_gitfit">Welcome to GitFit</string>
    <string name="title_git_fit">GitFit</string>
    <string name="describe_to_gitfit">GitFit is a comprehensive companion designed to enhance your health and fitness journey. It seamlessly monitors daily activities, such as steps taken, calories burned, and active minutes, while also keeping track of your workouts, from yoga to high-intensity interval training. </string>
    <string name="fragment_type">Activity Type</string>
    <string name="fragment_goal">Step Goal</string>
    <string name="fragment_home">Home</string>
    <string name="setGoal">Please set up your goals</string>
    <string name="SetGoalButton">Set Goal</string>
    <string name="InputGoal">Enter your daily steps goal</string>

    <string name="bmi_calculator_title">BMI Calculator</string>
    <string name="enter_height">Enter your height (in meters):</string>
    <string name="enter_weight">Enter your weight (in kilograms):</string>
    <string name="height_hint">Height (m)</string>
    <string name="weight_hint">Weight (kg)</string>
    <string name="calculate_bmi_button">Calculate BMI</string>
    <string name="bmi_score">Your BMI Score will appear here</string>
    <string name="height_error">Height must be greater than 0.</string>
    <string name="input_error">Please enter both height and weight.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fragment_bmi">BMI</string>
    <string name="fragment_calories">Calories</string>
    <string name="bmi">BMI</string>
    <string name="calories_fragment_title">Calories Burned</string>
    <string name="calories_burned_default_text">Calories Burned: 0</string>
    <string name="log_activity_button_text">Log Activity</string>

    <string name="title_burned_calories">Burned Calories</string>
    <string name="title_bmi">BMI</string>
    <string name="title_step_goal">Step Goal</string>
    <string name="title_activity_type">Activity Type</string>
    <string name="title_account">Account</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_account2">Account2Activity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_delete">delete account</string>
    <string name="confirm_delete_account">Are you sure</string>


</resources>