<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.BMI.BMIFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_height"
        android:textAppearance="?attr/textAppearanceListItem" />

    <EditText
        android:id="@+id/editTextHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/height_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_weight"
        android:textAppearance="?attr/textAppearanceListItem" />

    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/weight_hint" />

    <Button
        android:id="@+id/buttonCalculateBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_bmi_button"
        android:onClick="onCalculateBMIClicked" />


    <TextView
        android:id="@+id/textViewBMIScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bmi_score"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceListItem" />


</LinearLayout>
