<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.goal.GoalFragment">

    <TextView
        android:id="@+id/textViewStepGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setGoal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/InputGoal" />

    <Button
        android:id="@+id/buttonSetGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetGoalButton" />

</LinearLayout>
